--- a/template.yaml
+++ b/template.yaml
@@ -71,8 +71,8 @@ Resources:
           PROJECT_PATH: '-tmp-workspace'
           SDK_CLIENT_AUTH_TOKEN: !Ref AuthToken
           CLAUDE_CODE_USE_BEDROCK: '1'
-          AWS_ACCESS_KEY_ID: !Ref BedrockAccessKeyId
-          AWS_SECRET_ACCESS_KEY: !Ref BedrockSecretAccessKey
+          BEDROCK_ACCESS_KEY_ID: !Ref BedrockAccessKeyId
+          BEDROCK_SECRET_ACCESS_KEY: !Ref BedrockSecretAccessKey
       Policies:
         - S3CrudPolicy:
             BucketName: !Ref SessionBucket
