feat(agent-sdk): 改用 settings.json 注入 Bedrock 配置
- 新增 claude-settings.json.example 模板
- Dockerfile 复制 settings.json 到 CLAUDE_CONFIG_DIR
- .gitignore 忽略含 AK/SK 的 claude-settings.json

--- a/agent-sdk-server/Dockerfile
+++ b/agent-sdk-server/Dockerfile
@@ -13,11 +13,12 @@ RUN uv pip install --system boto3 claude-agent-sdk
 COPY *.py ./
 RUN chmod 644 *.py
 
-# Create ~/.claude and ~/.aws directories and ensure writable
-RUN mkdir -p /root/.claude/projects /root/.claude/debug /root/.claude/todos /root/.aws && \
-    touch /root/.claude.json && \
-    chmod -R 777 /root/.claude /root/.claude.json /root/.aws
+# Create /tmp/.claude directory and copy settings
+RUN mkdir -p /tmp/.claude/projects /tmp/.claude/debug /tmp/.claude/todos
+COPY claude-settings.json /tmp/.claude/settings.json
+RUN chmod -R 777 /tmp/.claude
 
 ENV HOME=/root
+ENV CLAUDE_CONFIG_DIR=/tmp/.claude
 
 CMD ["handler.lambda_handler"]
