refactor: 将静态环境变量从代码移至 template.yaml
- 移动 CLAUDE_CONFIG_DIR、DISABLE_AUTOUPDATER 等静态配置到 SAM 模板
- 移动 Bedrock model ARNs 到环境变量配置
- agent_session.py 仅保留动态凭证文件创建
- 添加 credentials 文件 chmod 0o600 权限限制

--- a/template.yaml
+++ b/template.yaml
@@ -66,13 +66,25 @@ Resources:
         Size: 2048
       Environment:
         Variables:
+          # App config
           SESSION_BUCKET: !Ref SessionBucket
           SESSION_TABLE: !Ref SessionTable
           PROJECT_PATH: '-tmp-workspace'
           SDK_CLIENT_AUTH_TOKEN: !Ref AuthToken
+          # Bedrock credentials (runtime injection)
           CLAUDE_CODE_USE_BEDROCK: '1'
           BEDROCK_ACCESS_KEY_ID: !Ref BedrockAccessKeyId
           BEDROCK_SECRET_ACCESS_KEY: !Ref BedrockSecretAccessKey
+          # Claude Code config (static)
+          CLAUDE_CONFIG_DIR: '/tmp/.claude-code'
+          AWS_SHARED_CREDENTIALS_FILE: '/tmp/.aws/credentials'
+          DISABLE_AUTOUPDATER: '1'
+          DISABLE_TELEMETRY: '1'
+          # Bedrock model ARNs
+          ANTHROPIC_DEFAULT_HAIKU_MODEL: '${BedrockHaikuModelArn}'
+          ANTHROPIC_DEFAULT_SONNET_MODEL: '${BedrockSonnetModelArn}'
+          ANTHROPIC_DEFAULT_OPUS_4_5_MODEL: '${BedrockOpusModelArn}'
+          ANTHROPIC_DEFAULT_OPUS_MODEL: '${BedrockOpusModelArn}'
       Policies:
         - S3CrudPolicy:
             BucketName: !Ref SessionBucket
