build(agent-sdk): Dockerfile添加配置文件复制
- COPY claude-config/ 到 /opt/claude-config/
- 运行时由 setup_lambda_environment() 复制到 /tmp/.claude-code

--- a/agent-sdk-server/Dockerfile
+++ b/agent-sdk-server/Dockerfile
@@ -13,6 +13,10 @@ RUN uv pip install --system boto3 claude-agent-sdk
 COPY *.py ./
 RUN chmod 644 *.py
 
+# Copy config files (MCP servers, SubAgents) to /opt (read-only at runtime)
+# setup_lambda_environment() will copy to /tmp/.claude-code at runtime
+COPY claude-config/ /opt/claude-config/
+
 # Create ~/.claude and ~/.aws directories and ensure writable
 RUN mkdir -p /root/.claude/projects /root/.claude/debug /root/.claude/todos /root/.aws && \
     touch /root/.claude.json && \
