fix: 重定向cache目录到/tmp解决Lambda权限问题
设置XDG_CACHE_HOME=/tmp/.cache，解决Claude CLI创建MCP日志目录时的权限错误

--- a/agent-sdk-server/Dockerfile
+++ b/agent-sdk-server/Dockerfile
@@ -24,5 +24,7 @@ RUN mkdir -p /root/.claude/projects /root/.claude/debug /root/.claude/todos /roo
     chmod -R 777 /root/.claude /root/.claude.json /root/.aws
 
 ENV HOME=/root
+# Redirect cache to /tmp (Lambda only allows writes to /tmp)
+ENV XDG_CACHE_HOME=/tmp/.cache
 
 CMD ["handler.lambda_handler"]
