chore: 添加samconfig.toml到.gitignore并替换敏感ARN为占位符

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ wheels/
 .aws-sam
 agent-sdk-server/claude-settings.json
 .DS_Store
+
+# Sensitive configuration files
+samconfig.toml
+samconfig*.toml
