security: 添加Bedrock模型ARN参数，支持环境变量注入
- 添加BedrockHaikuModelArn、BedrockSonnetModelArn、BedrockOpusModelArn参数
- 参数可选且使用NoEcho保护敏感信息
- 创建samconfig.toml.example模板供参考

--- a/template.yaml
+++ b/template.yaml
@@ -16,6 +16,21 @@ Parameters:
     Type: String
     Default: 'change-me-in-production'
     NoEcho: true
+  BedrockHaikuModelArn:
+    Type: String
+    Default: ''
+    Description: (Optional) ARN for Bedrock Haiku model (format: arn:aws:bedrock:REGION:ACCOUNT:application-inference-profile/PROFILE_ID)
+    NoEcho: true
+  BedrockSonnetModelArn:
+    Type: String
+    Default: ''
+    Description: (Optional) ARN for Bedrock Sonnet model (format: arn:aws:bedrock:REGION:ACCOUNT:application-inference-profile/PROFILE_ID)
+    NoEcho: true
+  BedrockOpusModelArn:
+    Type: String
+    Default: ''
+    Description: (Optional) ARN for Bedrock Opus 4.5 model (format: arn:aws:bedrock:REGION:ACCOUNT:application-inference-profile/PROFILE_ID)
+    NoEcho: true
 
 Globals:
   Function:
