feat: 实现 Skills 支持
- 添加 hello-world 示例 Skill（SKILL.md + reference + scripts）
- Dockerfile: 复制 skills 到 /opt/claude-skills
- agent_session.py: 运行时复制到 /tmp/.claude-code/skills/，配置 setting_sources=['user']
- 更新 README.md 移除 Skills TODO
- 添加 tests/test_skills_location.py 验证 SDK Skills 加载位置

--- a/agent-sdk-server/Dockerfile
+++ b/agent-sdk-server/Dockerfile
@@ -18,6 +18,10 @@ RUN chmod 644 *.py
 COPY claude-config/ /opt/claude-config/
 RUN chmod -R 755 /opt/claude-config/
 
+# Copy skills to /opt/claude-skills (will be copied to /tmp/.claude-code/skills at runtime)
+COPY claude-config/skills/ /opt/claude-skills/
+RUN chmod -R 755 /opt/claude-skills/
+
 # Create ~/.claude and ~/.aws directories and ensure writable
 RUN mkdir -p /root/.claude/projects /root/.claude/debug /root/.claude/todos /root/.aws && \
     touch /root/.claude.json && \
