fix: 修复Dockerfile hadolint警告
- 添加WORKDIR设置（DL3045）
- 添加dnf clean all清理缓存（DL3040）
- 使用./*.py避免glob被解释为选项（SC2035）
- 忽略版本固定警告（DL3016,DL3041）以支持自动更新

--- a/agent-sdk-server/Dockerfile
+++ b/agent-sdk-server/Dockerfile
@@ -1,18 +1,24 @@
 FROM public.ecr.aws/lambda/python:3.12-arm64
 
+# Set working directory (Lambda default)
+WORKDIR ${LAMBDA_TASK_ROOT}
+
 # Install uv and create uvx symlink
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
 RUN ln -s /usr/local/bin/uv /usr/local/bin/uvx
 
 # Install Claude Code CLI (npm package, requires nodejs)
-RUN dnf install -y nodejs npm && npm install -g @anthropic-ai/claude-code
+# hadolint ignore=DL3016,DL3041
+RUN dnf install -y nodejs npm && \
+    dnf clean all && \
+    npm install -g @anthropic-ai/claude-code
 
 # Install Python dependencies
 RUN uv pip install --system boto3 claude-agent-sdk
 
 # Copy Lambda code and ensure readable
-COPY *.py ./
-RUN chmod 644 *.py
+COPY ./*.py ./
+RUN chmod 644 ./*.py
 
 # Copy config files (MCP servers, SubAgents) to /opt (read-only at runtime)
 # setup_lambda_environment() will copy to /tmp/.claude-code at runtime
