--- a/template.yaml
+++ b/template.yaml
@@ -67,6 +67,24 @@ Resources:
         AttributeName: ttl
         Enabled: true
 
+  # SQS Task Queue
+  TaskQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      QueueName: !Sub '${AWS::StackName}-TaskQueue'
+      VisibilityTimeout: 900  # 15 minutes = Lambda timeout
+      MessageRetentionPeriod: 1209600  # 14 days
+      RedrivePolicy:
+        deadLetterTargetArn: !GetAtt DLQueue.Arn
+        maxReceiveCount: 3  # Retry 3 times then move to DLQ
+
+  # Dead Letter Queue
+  DLQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      QueueName: !Sub '${AWS::StackName}-DLQueue'
+      MessageRetentionPeriod: 1209600  # 14 days
+
   # Agent Server Lambda (Container)
   AgentServerFunction:
     Type: AWS::Serverless::Function
@@ -108,24 +126,68 @@ Resources:
       FunctionUrlConfig:
         AuthType: NONE
 
-  # SDK Client Lambda (ZIP)
+  # SDK Client Lambda - Producer (writes to SQS, returns 200 immediately)
   SdkClientFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: ./agent-sdk-client
       Handler: handler.lambda_handler
       Runtime: python3.12
+      Timeout: 30  # Producer should complete quickly
       Environment:
         Variables:
           TELEGRAM_BOT_TOKEN: !Ref TelegramBotToken
           AGENT_SERVER_URL: !GetAtt AgentServerFunctionUrl.FunctionUrl
           SDK_CLIENT_AUTH_TOKEN: !Ref AuthToken
+          QUEUE_URL: !Ref TaskQueue
+      Policies:
+        - SQSSendMessagePolicy:
+            QueueName: !GetAtt TaskQueue.QueueName
       Events:
         Webhook:
           Type: HttpApi
           Properties:
             Path: /webhook
             Method: POST
+
+  # Consumer Lambda - processes messages from SQS
+  ConsumerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./agent-sdk-client
+      Handler: consumer.lambda_handler
+      Runtime: python3.12
+      Timeout: 900  # 15 minutes for long Agent Server calls
+      Environment:
+        Variables:
+          TELEGRAM_BOT_TOKEN: !Ref TelegramBotToken
+          AGENT_SERVER_URL: !GetAtt AgentServerFunctionUrl.FunctionUrl
+          SDK_CLIENT_AUTH_TOKEN: !Ref AuthToken
+          QUEUE_URL: !Ref TaskQueue
+      Events:
+        SQSEvent:
+          Type: SQS
+          Properties:
+            Queue: !GetAtt TaskQueue.Arn
+            BatchSize: 1  # Process one message at a time
+            MaximumBatchingWindowInSeconds: 0  # Process immediately
+
+  # DLQ Alarm - alert when messages land in DLQ
+  DLQAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub '${AWS::StackName}-DLQ-Messages'
+      AlarmDescription: Alert when messages land in Dead Letter Queue
+      MetricName: ApproximateNumberOfMessagesVisible
+      Namespace: AWS/SQS
+      Statistic: Sum
+      Period: 300
+      EvaluationPeriods: 1
+      Threshold: 1
+      ComparisonOperator: GreaterThanOrEqualToThreshold
+      Dimensions:
+        - Name: QueueName
+          Value: !GetAtt DLQueue.QueueName
 
 Outputs:
   WebhookUrl:
@@ -134,3 +196,9 @@ Outputs:
   AgentServerUrl:
     Description: Agent Server Function URL
     Value: !GetAtt AgentServerFunctionUrl.FunctionUrl
+  TaskQueueUrl:
+    Description: Task Queue URL
+    Value: !Ref TaskQueue
+  DLQueueUrl:
+    Description: Dead Letter Queue URL
+    Value: !Ref DLQueue
