fix: 添加 ConsumerFunction 的 SQS 权限策略并增加 HTTP 状态码检查
- template.yaml: 为 ConsumerFunction 添加 SQSPollerPolicy 权限
- consumer.py: 添加 response.raise_for_status() 检查 HTTP 错误状态码

--- a/template.yaml
+++ b/template.yaml
@@ -164,6 +164,12 @@ Resources:
           AGENT_SERVER_URL: !GetAtt AgentServerFunctionUrl.FunctionUrl
           SDK_CLIENT_AUTH_TOKEN: !Ref AuthToken
           QUEUE_URL: !Ref TaskQueue
+          SESSION_TABLE: !Ref SessionTable
+      Policies:
+        - SQSPollerPolicy:
+            QueueName: !GetAtt TaskQueue.QueueName
+        - DynamoDBCrudPolicy:
+            TableName: !Ref SessionTable
       Events:
         SQSEvent:
           Type: SQS
