fix: 修复code review的3个高优先级问题
1. 修复评论4 (95分) - 异常重试导致重复Telegram消息
   - consumer.py: 移除一般异常的re-raise，只对TimeoutException重试
   - 避免已发送错误消息后还会重试导致用户收到3次重复消息

2. 修复评论3 (92分) - SQS send_message缺少错误处理
   - handler.py: 添加完整的SQS错误处理和恢复机制
   - 区分可恢复(限流)和不可恢复错误(权限、队列不存在)
   - 发送CloudWatch自定义指标用于监控
   - SQS失败仍返回200给Telegram，防止webhook重试雪崩

3. 修复评论1 (85分) - CloudWatch告警缺少AlarmActions
   - template.yaml: 添加SNS Topic用于告警通知
   - DLQAlarm: 配置AlarmActions发送到SNS
   - 新增ProducerSQSErrorAlarm和ProducerLambdaErrorAlarm

其他改进:
   - Producer Lambda超时从30秒改为10秒(评论6: 75分)
   - handler.py添加CloudWatch权限策略

--- a/template.yaml
+++ b/template.yaml
@@ -85,6 +85,13 @@ Resources:
       QueueName: !Sub '${AWS::StackName}-DLQueue'
       MessageRetentionPeriod: 1209600  # 14 days
 
+  # SNS Topic for alarm notifications
+  AlarmTopic:
+    Type: AWS::SNS::Topic
+    Properties:
+      TopicName: !Sub '${AWS::StackName}-Alarms'
+      DisplayName: OmniCloud Agent Alarms
+
   # Agent Server Lambda (Container)
   AgentServerFunction:
     Type: AWS::Serverless::Function
@@ -133,7 +140,7 @@ Resources:
       CodeUri: ./agent-sdk-client
       Handler: handler.lambda_handler
       Runtime: python3.12
-      Timeout: 30  # Producer should complete quickly
+      Timeout: 10  # Producer should complete quickly (<1s for message validation + SQS write)
       Environment:
         Variables:
           TELEGRAM_BOT_TOKEN: !Ref TelegramBotToken
@@ -143,6 +150,11 @@ Resources:
       Policies:
         - SQSSendMessagePolicy:
             QueueName: !GetAtt TaskQueue.QueueName
+        - Statement:
+            - Effect: Allow
+              Action:
+                - cloudwatch:PutMetricData
+              Resource: '*'
       Events:
         Webhook:
           Type: HttpApi
@@ -191,9 +203,47 @@ Resources:
       EvaluationPeriods: 1
       Threshold: 1
       ComparisonOperator: GreaterThanOrEqualToThreshold
+      AlarmActions:
+        - !Ref AlarmTopic
       Dimensions:
         - Name: QueueName
           Value: !GetAtt DLQueue.QueueName
+
+  # Producer SQS send error alarm
+  ProducerSQSErrorAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub '${AWS::StackName}-Producer-SQS-Errors'
+      AlarmDescription: Alert when Producer fails to send messages to SQS
+      MetricName: SQSError.QueueNotFound
+      Namespace: OmniCloudAgent/Producer
+      Statistic: Sum
+      Period: 60
+      EvaluationPeriods: 1
+      Threshold: 1
+      ComparisonOperator: GreaterThanOrEqualToThreshold
+      AlarmActions:
+        - !Ref AlarmTopic
+      TreatMissingData: notBreaching
+
+  # Producer Lambda error alarm
+  ProducerLambdaErrorAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub '${AWS::StackName}-Producer-Lambda-Errors'
+      AlarmDescription: Alert on Producer Lambda exceptions
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Statistic: Sum
+      Period: 60
+      EvaluationPeriods: 1
+      Threshold: 1
+      ComparisonOperator: GreaterThanOrEqualToThreshold
+      AlarmActions:
+        - !Ref AlarmTopic
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref SdkClientFunction
 
 Outputs:
   WebhookUrl:
@@ -208,3 +258,8 @@ Outputs:
   DLQueueUrl:
     Description: Dead Letter Queue URL
     Value: !Ref DLQueue
+  AlarmTopicArn:
+    Description: SNS Topic for CloudWatch Alarm notifications
+    Value: !Ref AlarmTopic
+    Export:
+      Name: !Sub '${AWS::StackName}-AlarmTopic'
