ci: 简化workflow配置使用model参数而非ARN
- 移除ANTHROPIC_DEFAULT_SONNET_MODEL环境变量
- 改用with.model参数指定haiku模型
- 禁用show_full_output减少日志输出

--- a/.github/workflows/release-changelog.yml
+++ b/.github/workflows/release-changelog.yml
@@ -31,11 +31,10 @@ jobs:
 
       - name: Update Changelog with Claude Code
         uses: anthropics/claude-code-action@v1
-        env:
-          ANTHROPIC_DEFAULT_SONNET_MODEL: ${{ secrets.BEDROCK_MODEL_ARN}}
         with:
+          model: "haiku"
           use_bedrock: "true"
-          show_full_output: "true"
+          show_full_output: "false"
           prompt: |
             请更新 CHANGELOG.md 文件以完成版本发布：
 
