feat: add user whitelist security module
- Add security.py with user whitelist validation
- Support my_chat_member event to auto-leave unauthorized groups
- Block private messages from non-whitelisted users
- Configure via [security] section in config.toml
- Default: user_whitelist = ["all"] (allow everyone)

--- a/agent-sdk-client/config.toml
+++ b/agent-sdk-client/config.toml
@@ -8,3 +8,9 @@ commands = [
 [local_commands]
 # Local-only commands handled by the client
 help = "Hello World"
+
+[security]
+# User IDs allowed to add bot to groups and send private messages.
+# Use ["all"] to allow everyone (default behavior).
+# Example with specific users: user_whitelist = [123456789, 987654321]
+user_whitelist = ["all"]
