feat: add /newchat command and topic precheck for groups
- Add /newchat local command to create new Topic and send first message
- Add topic precheck when bot joins group (is_forum + can_manage_topics)
- Send detailed setup instructions if precheck fails
- Consumer uses message_data text/thread_id (allows handler override)

--- a/agent-sdk-client/config.toml
+++ b/agent-sdk-client/config.toml
@@ -8,6 +8,7 @@ commands = [
 [local_commands]
 # Local-only commands handled by the client
 help = "Hello World"
+newchat = "创建新对话"
 
 [security]
 # User IDs allowed to add bot to groups and send private messages.
