feat: sync architecture upgrades from omnicloud-support-agent
Major improvements:
- SQS: Upgrade to FIFO queue for message ordering guarantee
- Docker: Upgrade Node.js to 20+ for MCP undici compatibility
- Docker: Change HOME to /tmp for MCP auth file writes
- Security: Add Telegram webhook secret token verification (HMAC)
- Handler: Add FIFO MessageGroupId/DeduplicationId support
- Handler: Add /debug command for session file download
- Handler: Add /start welcome message handler
- Handler: Refactor local commands to support handler type
- Consumer: Add continuous typing indicator (every 4s)
- Consumer: Add Markdown conversion pipeline for Telegram
- Consumer: Add message_time passthrough
- Config: Add LocalCommand dataclass for handler type support
- Dependencies: Add telegramify-markdown for Markdown conversion

--- a/agent-sdk-client/config.toml
+++ b/agent-sdk-client/config.toml
@@ -7,8 +7,15 @@ commands = [
 
 [local_commands]
 # Local-only commands handled by the client
-help = "Hello World"
-newchat = "创建新对话"
+# Supports two formats:
+#   - Legacy: help = "static response text"
+#   - New: help = { type = "static", response = "text" }
+#   - Handler: newchat = { type = "handler", handler = "newchat" }
+
+help = { type = "static", response = "Hello World" }
+newchat = { type = "handler", handler = "newchat" }
+start = { type = "handler", handler = "start" }
+debug = { type = "handler", handler = "debug" }
 
 [security]
 # User IDs allowed to add bot to groups and send private messages.
